# tars

./: .gitignore  PLAN.md  README.md  ROADMAP.md  compass_artifact.md  config.example.toml  deploy.sh  pyproject.toml
.claude/: settings.local.json
migrations/: 001_initial.sql  002_brain_docs.sql  003_doc_index.sql  004_cal_events.sql  005_scheduler_state.sql  006_cost_rollups.sql  007_feeds.sql  008_pending_actions.sql  009_pending_reply.sql
scripts/: bootstrap_vps.sh  drop_vec_docs.py  first_deploy.sh  google_oauth_bootstrap.py  harden_ssh.sh  inspect_db.py  make_linux_config.py  restore_from_backup.sh  setup_backups.sh  tars-backup.sh
src/tars/: __init__.py  __main__.py  agent.py  config.py  db.py  prompt.py  router.py  tools.py
src/tars/bot/: actions.py  handlers.py
src/tars/dashboard/: app.py
src/tars/integrations/: gcal.py  gmail.py  google_auth.py  news.py  vault.py
src/tars/memory/: embed.py  entities.py  follow_ups.py  index.py  search.py
src/tars/scheduler/: brain_reindex.py  calendar_pull.py  competitive_intel_scan.py  cooldown_clear.py  cost_rollup_daily.py  email_summary.py  entity_dedup.py  jobs.py  lab_notebook_digest.py  morning_briefing.py  news_sources_refresh.py  runtime.py  stale_thread_summarize.py  vault_sweep.py  weekly_followup_reconcile.py
systemd/: syncthing-user.service  tars-backup.service  tars-backup.timer  tars.service
tests/unit/: test_agent_history.py  test_bot_auth.py  test_cost.py  test_embed_fallback.py  test_entities.py  test_follow_ups.py  test_memory_basics.py  test_prompt_byte_stability.py  test_router_caps.py
(+2 files in other folders)
