[project]
name = "tars"
version = "0.1.0"
description = "Personal AI agent. One process. Telegram + scheduled jobs + dashboard."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28.2",
    "apscheduler>=3.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1.6",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "voyageai>=0.3",
    "numpy>=1.26",  # voyageai imports numpy at runtime but doesn't always declare it
    "dateparser>=1.2",  # natural-language time parsing for custom-reminder flow
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "feedparser>=6.0",
    "tenacity>=9.0",
    "sse-starlette>=2.1",
    "sqlalchemy>=2.0",  # APScheduler SQLAlchemyJobStore
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tars"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
